@@ -1,5 +1,8 @@
-$Id: Changelog.txt,v 1.206 2015/05/22 10:23:47 nanard Exp $
+$Id: Changelog.txt,v 1.208 2015/07/15 12:18:59 nanard Exp $
 miniUPnP client Changelog.
+
+2015/07/15:
+  Check malloc/calloc
 
 2015/06/16:
   update getDevicesFromMiniSSDPD() to process longer minissdpd
